--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "js/src/index",
   "dependencies": {
     "ArrayOf": "aleclarson/ArrayOf#1.0.0",
+    "Maybe": "aleclarson/Maybe#1.0.0",
     "OneOf": "aleclarson/OneOf#1.0.0",
     "Promise": "aleclarson/Promise#1.0.0",
-    "Void": "aleclarson/Void#1.0.0",
+    "Shape": "aleclarson/Shape#1.0.0",
+    "Type": "aleclarson/Type#1.0.0",
     "assert": "aleclarson/assert#1.0.0",
     "assertType": "aleclarson/assertType#1.0.0",
     "assertTypes": "aleclarson/assertTypes#1.0.0",
@@ -14,12 +16,15 @@
     "escape-string-regexp": "aleclarson/escape-string-regexp#1.0.5",
     "exec": "aleclarson/exec#1.0.0",
     "finder": "aleclarson/finder#2.0.0",
+    "getArgProp": "aleclarson/getArgProp#1.0.0",
     "hasKeys": "aleclarson/hasKeys#1.0.0",
     "in-array": "aleclarson/in-array#1.0.0",
     "io": "aleclarson/io#1.0.0",
     "isType": "aleclarson/isType#1.0.0",
     "log": "aleclarson/log#1.0.0",
     "node-semver": "aleclarson/node-semver#5.1.0",
+    "prompt": "aleclarson/prompt#1.0.0",
+    "random": "aleclarson/random#1.0.4",
     "run": "aleclarson/run#1.0.0",
     "sorted-array": "aleclarson/sorted-array#2.0.0",
     "sync": "aleclarson/sync#1.0.0"
