--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "git-utils",
   "version": "1.0.0",
   "main": "js/index",
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee -cb -o js src",
+    "postinstall": "postinstall-build js 'npm run build'"
+  },
   "dependencies": {
     "Maybe": "aleclarson/Maybe#1.0.1",
     "Null": "aleclarson/Null#1.0.0",
@@ -22,17 +29,16 @@
     "isType": "aleclarson/isType#1.0.0",
     "log": "aleclarson/log#1.0.0",
     "node-semver": "aleclarson/node-semver#5.1.0",
+    "postinstall-build": "0.2.x",
     "random": "aleclarson/random#1.0.4",
     "sorted-array": "aleclarson/sorted-array#2.0.0",
     "sync": "aleclarson/sync#1.0.0"
   },
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ],
-    "implicitDependencies": [
-      "os",
-      "path"
-    ]
-  }
+  "devDependencies": {
+    "coffee-script": "1.9.x"
+  },
+  "implicitDependencies": [
+    "os",
+    "path"
+  ]
 }
