--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "lotus-coffee"
   ],
   "scripts": {
-    "build": "coffee -cb -o js src",
-    "postinstall": "postinstall-build js 'npm run build'"
+    "build": "coffee-build -v 1.11.x -b -o js src",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "Maybe": "aleclarson/Maybe#1.0.1",
@@ -29,13 +29,9 @@
     "isType": "aleclarson/isType#1.0.0",
     "log": "aleclarson/log#2.0.0",
     "node-semver": "aleclarson/node-semver#5.1.0",
-    "postinstall-build": "0.2.x",
     "random": "aleclarson/random#1.0.4",
     "sorted-array": "aleclarson/sorted-array#2.0.0",
     "sync": "aleclarson/sync#1.0.0"
-  },
-  "devDependencies": {
-    "coffee-script": "1.9.x"
   },
   "implicitDependencies": [
     "os",
