--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "Promise": "aleclarson/Promise#2.2.1",
-    "SortedArray": "aleclarson/SortedArray#2.1.0",
+    "Promise": "aleclarson/Promise#2.2.5",
+    "SortedArray": "aleclarson/SortedArray#2.1.1",
     "assertValid": "aleclarson/assertValid#1.0.0",
     "diff": "2.2.x",
     "escape-string-regexp": "aleclarson/escape-string-regexp#1.0.5",
-    "exec": "aleclarson/exec#1.0.1",
-    "finder": "aleclarson/finder#2.0.4",
+    "exec": "aleclarson/exec#1.0.2",
+    "finder": "aleclarson/finder#2.0.5",
     "hasKeys": "aleclarson/hasKeys#1.0.0",
     "in-array": "aleclarson/in-array#1.0.0",
-    "io": "aleclarson/io#2.2.1",
+    "io": "aleclarson/io#2.2.2",
     "isValid": "aleclarson/isValid#1.0.0",
-    "log": "aleclarson/log#2.2.0",
+    "log": "aleclarson/log#2.2.1",
     "node-semver": "aleclarson/node-semver#5.1.0",
     "random": "aleclarson/random#1.0.4",
-    "sync": "aleclarson/sync#1.0.2"
+    "sync": "aleclarson/sync#1.0.3",
     "valido": "aleclarson/valido#1.0.2"
   },
   "implicitDependencies": [
