--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "escape-string-regexp": "aleclarson/escape-string-regexp#1.0.5",
     "exec": "aleclarson/exec#1.0.2",
     "finder": "aleclarson/finder#2.0.5",
+    "fsx": "aleclarson/fsx#1.3.0",
     "hasKeys": "aleclarson/hasKeys#1.0.0",
     "in-array": "aleclarson/in-array#1.0.0",
-    "io": "aleclarson/io#2.2.2",
     "isValid": "aleclarson/isValid#1.0.0",
     "log": "aleclarson/log#2.2.1",
     "node-semver": "aleclarson/node-semver#5.1.0",
