--- a/package.json
+++ b/package.json
@@ -10,21 +10,15 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "Promise": "aleclarson/Promise#2.2.5",
-    "SortedArray": "aleclarson/SortedArray#2.1.1",
+    "SortedArray": "aleclarson/SortedArray#1.0.0",
     "assertValid": "aleclarson/assertValid#1.0.0",
-    "diff": "2.2.x",
-    "escape-string-regexp": "aleclarson/escape-string-regexp#1.0.5",
-    "exec": "aleclarson/exec#1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "exec": "npm:@cush/exec@^1.3.1",
     "finder": "aleclarson/finder#2.0.5",
     "fsx": "aleclarson/fsx#1.3.1",
     "hasKeys": "aleclarson/hasKeys#1.0.0",
-    "in-array": "aleclarson/in-array#1.0.0",
     "isValid": "aleclarson/isValid#1.0.0",
-    "log": "aleclarson/log#2.2.1",
-    "node-semver": "aleclarson/node-semver#5.1.0",
-    "random": "aleclarson/random#1.0.4",
-    "sync": "aleclarson/sync#1.0.3",
-    "valido": "aleclarson/valido#1.1.2"
+    "semver": "^5.5.0",
+    "valido": "aleclarson/valido#1.1.4"
   }
 }
