--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "repository": "aleclarson/git-utils",
   "description": "Git automation for Javascript",
   "scripts": {
-    "build": "coffee-build src -o lib",
-    "postinstall": "npm run build"
+    "build": "coffee-build src -o lib"
   },
   "files": [
     "lib"
